# SOFTX-D-16-00031

./: .gitignore  CMakeLists-dynamic.txt  CMakeLists-static-cli.txt  CMakeLists-static-mingw.txt  CMakeLists-static.txt  INSTALL  LICENSES  README.md  takin.project  themakefile
dialogs/: AboutDlg.cpp  AtomsDlg.cpp  AtomsDlg.h  DWDlg.cpp  DispDlg.cpp  DynPlaneDlg.cpp  EllipseDlg.cpp  EllipseDlg.h  EllipseDlg3D.cpp  EllipseDlg3D.h  FilePreviewDlg.cpp  GotoDlg.cpp  NeutronDlg.cpp  PowderDlg.cpp  RealParamDlg.cpp  RealParamDlg.h  RecipParamDlg.cpp  RecipParamDlg.h  SpurionDlg.cpp
doc/: reso-sqw.html
instruments/: eiger.taz  mira.taz  panda.taz  tasp.taz
libs/: globals.cpp  plotgl.cpp  plotgl.h  qthelper.cpp  version.h
libs/formfactors/: formfact_impl.h
misc/: fcc.x3d  fcc2.x3d
samples/: Al.taz  Cu.taz  CuMnSb.taz  MgV2O4.taz  MnSi.taz  MnSi_on_Mira.taz  yig.taz
tlibs/: .gitignore  CMakeLists.txt  INSTALL  LICENSES  version.cpp  version.h
tlibs/cl/: cl.h
tlibs/file/: comp.h  file.h  loaddat.h  loadinstr.cpp  loadinstr.h  loadinstr_impl.h  prop.h  recent.cpp  recent.h  tmp.cpp  tmp.h  x3d.cpp  x3d.h
tlibs/fit/: funcmod.h  interpolation.h  minuit.cpp  minuit.h
tlibs/gfx/: gil.h  gl.cpp  gl.h  gl_impl.h  gnuplot.cpp  gnuplot.h  gnuplot_impl.h
tlibs/helper/: array.h  exception.h  flags.cpp  flags.h  hash.h  misc.h  py.h  thread.h  traits.h
tlibs/log/: debug.cpp  debug.h  log.cpp  log.h
tlibs/math/: atoms.h  bz.h  dft.h  fftw.cpp  fftw.h  fourier.cpp  fourier.h  geo.h  kd.h  lattice.h  linalg.h  linalg2.cpp  linalg2.h  linalg2_impl.h  linalg_ops.h  mag.h  math.h  mieze.hpp  neutrons.h  neutrons.hpp  nn.h  nuclear.h  numint.hpp  powder.h  quat.h  rand.cpp  rand.h  rt.h  term.h  units.h
tlibs/net/: tcp.cpp  tcp.h  tcp_impl.h
tlibs/script/: CMakeLists.txt  themakefile
tlibs/script/apps/: Al_abs.scr  bose.scr  braggtail.scr  colors.scr  dialog.scr  elastic_cubic.scr  fit.scr  fit_se.scr  formfact.scr  gplchars.scr  hkl.scr  instr.scr  mcstas.scr  mean_free_path.scr  mieze.scr  neutrons.scr  phonon_1atom.scr  phonon_2atom.scr  plot.scr
tlibs/script/lang/: calls.cpp  calls.h  globals.cpp  globals.h  handles.cpp  handles.h  info.cpp  info.h  lexer.cpp  lexer.h  main.cpp  node.cpp  node.h  node_eval.cpp  node_opt.cpp  script.yy  script_helper.cpp  script_helper.h  symbol.cpp  symbol.h  types.h  yylexer.cpp  yylexer.h
tlibs/script/runtime/: calls_basic.cpp  calls_basic.h  calls_file.cpp  calls_file.h  calls_fit.cpp  calls_fit.h  calls_math.cpp  calls_math.h  calls_plot.cpp  calls_plot.h  calls_thread.cpp  calls_thread.h
tlibs/script/stuff/: hermelin.nanorc
tlibs/string/: eval.cpp  eval.h  eval_impl.h  spec_char.cpp  spec_char.h  string.h
tlibs/time/: chrono.h  stopwatch.h
tools/cli/: cli_main.cpp
tools/convofit/: convofit.cpp  model.cpp  scan.cpp  scan.h
tools/mini_scanmon/: mini_scanmon.cpp
tools/misc/: addscans.cpp  fcc_hk0.cpp  hopfgen.cpp  tst_client.cpp  tst_server.cpp  tstplot.sh
tools/monteconvo/: ConvoDlg.cpp  SqwParamDlg.cpp  SqwParamDlg.h  TASReso.cpp  mconv_main.cpp  sqw.cpp  sqw_py.cpp  sqwfactory.cpp
tools/montereso/: res.cpp  res.h  res_main.cpp
tools/posextract/: posextract.cpp
tools/res/: ResoDlg.cpp  ResoDlg.h  cn.cpp  cn.h  defs.h  eck.cpp  ellipse.h  mc.h  pop.cpp  viol.cpp  viol.h
tools/scanviewer/: scanviewer.cpp  scanviewer.h
tools/sggen/: sfact.cpp
tools/taz/: nicos.cpp  nicos.h  proj_lattice.cpp  real_lattice.cpp  real_lattice.h  recip3d.cpp  scattering_triangle.cpp  scattering_triangle.h  sics.cpp  sics.h  tas_layout.cpp  taz.cpp  taz.h  taz_crys.cpp  taz_export.cpp  taz_file.cpp  taz_net.cpp  tof_layout.cpp  tof_layout.h
ui/: ellipses.ui  real_params.ui  recip_params.ui  reso.ui
